# kestrion

./: 404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo_runs.db  index.html  kestrion_runs.db  mkdocs.yml  objects.inv  pyproject.toml  roadmap.md  unused.db
.github/workflows/: ci.yml  docs.yml  release.yml
api-reference/: index.html
api-reference/agent/: index.html
api-reference/core/: index.html
api-reference/llm/: index.html
api-reference/mcp/: index.html
api-reference/store/: index.html
architecture/: index.html
concepts/approval-gates/: index.html
concepts/checkpointing/: index.html
concepts/event-sourcing/: index.html
docs/: architecture.md  getting-started.md  index.md
docs/api-reference/: agent.md  core.md  index.md  llm.md  mcp.md  store.md
docs/concepts/: approval-gates.md  checkpointing.md  event-sourcing.md
examples/kubectl_agent/: main.py
examples/ops_demo/: main.py
getting-started/: index.html
search/: search_index.json
src/kestrion/agent/: agent.py  decorators.py
src/kestrion/core/: engine.py  types.py
src/kestrion/llm/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
src/kestrion/mcp/: client.py  server.py
src/kestrion/store/: sqlite_store.py
tests/: conftest.py
tests/fixtures/: mcp_server_fixture.py  mcp_server_fixture_gated.py  mock_mcp_server.py
tests/unit/: test_agent.py  test_approval_chains.py  test_approval_timeouts.py  test_engine.py  test_handoff.py  test_mcp_client.py  test_mcp_server.py  test_ollama_provider.py  test_parallel_tool_calls.py  test_smoke_ollama.py  test_sqlite_store.py  test_sub_agents.py  test_types.py
