[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kestrion"
version = "0.2.1"
description = "A durable-execution-first framework for building production AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "VD" }
]
keywords = ["ai", "agents", "llm", "mcp", "agentic", "durable-execution"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.50.0",
]
ollama = [
    "httpx>=0.27.0",
]
mcp = [
    "mcp>=1.5.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "mcp>=1.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "mcp>=1.5.0",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
kestrion = "kestrion.cli.main:main"

[project.urls]
Homepage = "https://www.kestrion.in"
Repository = "https://github.com/VinayakDubey07/kestrion"
Issues = "https://github.com/VinayakDubey07/kestrion/issues"
Changelog = "https://github.com/VinayakDubey07/kestrion/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true